[FLINK-38856][table] Add support for ALTER MATERIALIZED TABLE DROP schema component